Implement time application features in api and frontend
